# mrbind

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-llvm.yml  build-release.yml
ci/: build_llvm.sh  download_llvm.sh  git_version.sh
docs/: adding_template_specializations.md  adjusting_comments.md  building_mrbind.md  clang_abi_compat.md  customizing_type_names.md  generating_c.md  generating_csharp.md  generating_python.md  keep_alive.md  running_parser.md  skipping_entities.md  splitting_libraries.md  state_of_the_project.md
example/: README.md  _set_env_vars.sh  make_c.sh  run_example.c
examples/: README.md  clean.sh
examples/_detail/: set_env_vars.sh
examples/c/: clean.sh  example_consumer.c  run.sh
examples/csharp/: clean.sh  run.sh
examples/csharp/example_consumer/: example_consumer.cs  example_consumer.csproj
examples/input/: example.h
examples/js/: clean.sh  example_consumer.mjs  run.sh
examples/python/: clean.sh  example_consumer.py  run.sh
include/mrbind/: LICENSE.md  define_missing_macros.h
include/mrbind/helpers/: adjust_size_t.h  all_standard_headers.h  common.h  const_string.h  define_missing_macros.h  enum_flag_ops.h  macro_sequence_for.h  map_filter_pack.h  rebind_container.h  strings.h  type_index.h  type_lists.h  type_name.h  undef_all_macros.h
include/mrbind/targets/: pybind11.h
scripts/: apply_to_files.mk  msvc_comp_db.sh  parse_vs_logs.awk
src/: combine_types.cpp  combine_types.h  conv_ops_to_ctors.h  data_to_json.cpp  data_to_json.h  data_to_macros.cpp  data_to_macros.h  main.cpp  multiplex_data.cpp  multiplex_data.h  parsed_data.h  pre_include_clang.h
src/common/: command_line_args_as_utf8.h  command_line_parser.cpp  command_line_parser.h  filesystem.cpp  filesystem.h  from_json.h  hash.h  json_common.h  meta.h  ordered_set_and_map.h  parse_cpp_comment.h  parsed_data.h  reflection.h  set_error_handlers.cpp  set_error_handlers.h  string_escape.cpp  string_filter.h  string_regex_adjuster.h  strings.h  to_json.h  type_name.h
src/common/polyfill/: std_filesystem_path_hash.h
src/generators/c/: binding_common.cpp  binding_common.h  binding_containers.cpp  binding_containers.h  binding_helpers.cpp  binding_helpers.h  generator.cpp  generator.h  main.cpp  module.cpp  module.h
src/generators/c_interop/: c_output_desc.cpp  c_output_desc.h  desc_to_and_from_json.cpp  desc_to_and_from_json.h
src/generators/common/: command_line_args_as_utf8.cpp  data_from_file.cpp  data_from_file.h  data_from_json.cpp  data_from_json.h  load_file.cpp  load_file.h
src/generators/csharp/: generator.cpp  generator.h  main.cpp
src/generators/js/: generator.cpp  generator.h  main.cpp
src/parser/: combine_types.cpp  combine_types.h  copy_inherited_members.cpp  copy_inherited_members.h  cppdecl_helpers.cpp  cppdecl_helpers.h  data_to_json.cpp  data_to_json.h  data_to_macros.cpp  data_to_macros.h  disable_rtti.cpp  main.cpp  main.h  meta.h  multiplex_data.cpp  multiplex_data.h  post_include_clang.h  pre_include_clang.h  string_manip.cpp  string_manip.h
test/: make.sh  make_c.sh  make_csharp.sh  make_py.sh  test.h  test_namespaces.h
test/input/: 1.cpp  1.h  2.h  aliases.cpp  all.h
test/input/A/: a.h
test/input/AB_base/: ab_base.h
test/input/B/: a.h  b.h
test/input/MR/: 1.h  2.h  _common.h  test_abstract_classes.h  test_adjusting_names.h  test_aggregates.h  test_arrays_of_incomplete_types.h  test_arrays_of_incomplete_types_2.h  test_bases.h  test_combined_a_b.h  test_conv_ops.h  test_copy_inherited_members.h  test_csharp.h  test_custom_preferred_names.h  test_declaration_order.h  test_deprecation.h  test_includes_for_enum_constants.h  test_includes_for_enum_constants_2.h  test_includes_for_enum_constants_3.h  test_iostream.h  test_lifetime_inference.h  test_matching_layout.h  test_member_vars.h  test_mention_blacklists.h  test_nested_class_template_inst.h  test_nested_types.h  test_omitting_template_args_and_quals.h  test_overloaded_operators.h  test_overloads.h  test_phmap.h  test_simple_types.h  test_size_t_ptrdiff_t.h  test_static_memberr.h  test_std_containers.h  test_std_expected.h  test_std_filesystem.h  test_std_function.h  test_std_optional.h  test_std_shared_ptr.h  test_std_string.h  (+8 more)
test/input_py/: all.h
test/input_py/MR/: 1.h
test/output_c/: compile_flags.txt  desc.json
test/output_c/include/: common.h  exports.h  iostream.h  pass_by.h  phmap_btree_map_int_float.h  phmap_btree_multimap_int_float.h  phmap_btree_multiset_int.h  phmap_btree_set_int.h  phmap_flat_hash_map_int_float.h  phmap_flat_hash_set_int.h  phmap_node_hash_map_int_float.h  phmap_node_hash_set_int.h  phmap_parallel_flat_hash_map_int_float.h  phmap_parallel_flat_hash_set_int.h  phmap_parallel_node_hash_map_int_float.h  phmap_parallel_node_hash_set_int.h  std_array_MR_StdContainers_A_42.h  std_array_MR_StdContainers_NonAssignable_42.h  std_array_int_42.h  std_array_int_43.h  std_deque_MR_StdContainers_NonAssignable.h  std_deque_int.h  std_expected_MR_CSharp_E1_float.h  std_expected_MR_CSharp_ExposedLayoutSh_float.h  std_expected_MR_CSharp_ExposedLayout_float.h  std_expected_MR_CSharp_NonTrivial_float.h  std_expected_MR_CSharp_SA_float.h  std_expected_MR_CSharp_Trivial_float.h  std_expected_int_float.h  std_expected_int_std_string.h  std_expected_void_float.h  std_filesystem_path.h  std_function_MR_CSharp_E1_from_MR_CSharp_E1.h  std_function_MR_CSharp_ExposedLayoutC_from_MR_CSharp_ExposedLayoutC.h  std_function_MR_StdFunction_A.h  std_function_MR_StdFunction_E_from_int_MR_StdFunction_E.h  std_function_MR_StdFunction_E_func_from_int_MR_StdFunction_E_from_int_MR_StdFunction_E.h  std_function_int.h  std_function_int_from_int_int.h  std_function_int_from_std_string.h  (+106 more)
test/output_c/source/: __mrbind_c_details.cpp  __mrbind_c_details.h  common.cpp  iostream.cpp  (+147 more)
test/output_c_fixed_typedefs/: desc.json
test/output_csharp/: output_csharp.csproj
test/output_csharp_fixed_typedefs_64_only/: output_csharp_fixed_typedefs_64_only.csproj
test/output_py/: 1.txt  parsed.cpp
test/run_csharp/: main.cs  run_csharp.csproj
(+1434 files in other folders)
